fix(get-deis): fix broken installation documentation links
Old links point to broken ReadTheDocs pages.

--- a/get-deis/index.html
+++ b/get-deis/index.html
@@ -28,13 +28,13 @@ meta:
                     <p>
                     Install CoreOS on the hosting infrastructure of your choice.
                     Deis includes documentation for installing CoreOS on
-                    <a href="http://docs.deis.io/en/latest/installing_deis/aws/" target="_blank">Amazon AWS</a>,
-                    <a href="http://docs.deis.io/en/latest/installing_deis/digitalocean/" target="_blank">DigitalOcean</a>,
-                    <a href="http://docs.deis.io/en/latest/installing_deis/gce/" target="_blank">Google Compute Engine</a>,
-                    <a href="http://docs.deis.io/en/latest/installing_deis/rackspace/" target="_blank">Rackspace</a>,
-                    <a href="http://docs.deis.io/en/latest/installing_deis/vagrant/" target="_blank">Vagrant</a>
+                    <a href="http://docs.deis.io/en/latest/installing_deis/aws.html" target="_blank">Amazon AWS</a>,
+                    <a href="http://docs.deis.io/en/latest/installing_deis/digitalocean.html" target="_blank">DigitalOcean</a>,
+                    <a href="http://docs.deis.io/en/latest/installing_deis/gce.html" target="_blank">Google Compute Engine</a>,
+                    <a href="http://docs.deis.io/en/latest/installing_deis/rackspace.html" target="_blank">Rackspace</a>,
+                    <a href="http://docs.deis.io/en/latest/installing_deis/vagrant.html" target="_blank">Vagrant</a>
                     and
-                    <a href="http://docs.deis.io/en/latest/installing_deis/baremetal/" target="_blank">bare metal</a>.
+                    <a href="http://docs.deis.io/en/latest/installing_deis/baremetal.html" target="_blank">bare metal</a>.
                     </p>
                 </div>
             </div>
